Updated the TGM Library
added the plugin I use most

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name:        	Fondamenta
+Theme Name:        	Fondamenta + Bootstrap
 Theme URI:
 Description:        WordPress starter theme based on Roots and other stuff.
 Version:            0.9
