--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -34,7 +34,7 @@ body {
 @import "libs/typography"; 					// Base level typography
 @import "libs/forms";						// Forms
 @import "add-ons/module-typeset"; 			// Specific typesetting
-@import "add-ons/iubenda"; 					// Iubenda
+@import "libs/iubenda"; 					// Iubenda
 
 a {
 	color: $action;
