--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -28,9 +28,11 @@ body {
 
 @import "bootstrap-custom";					// bootstrap
 @import "libs/typography"; 					// Base level typography
-@import "libs/forms";						// Forms
 @import "add-ons/module-typeset"; 			// Specific typesetting
+@import "libs/forms";						// Forms
 @import "libs/iubenda"; 					// Iubenda
+@import "libs/bxslider"; 					// bxslider
+@import "libs/strip"; 						// strip
 
 a {
 	color: $action;
