--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 Theme Name:        	Fondamenta + Bootstrap
 Theme URI:
 Description:        WordPress starter theme based on Roots and other stuff.
-Version:            0.9
-Author:             Federico Vezzoli
-Author URI:         http://federicovezzoli.com/
+Version:            1.0
+Author:             DOT agency
+Author URI:         http://dot-agency.it
 
 License:            MIT License
 License URI:        http://opensource.org/licenses/MIT
