--- a/sass/libs/_typography.scss
+++ b/sass/libs/_typography.scss
@@ -21,3 +21,175 @@ ol 													{ @include nobullet; }
 li 													{ line-height: inherit; }					
 strong, b 											{ font-weight: 700; }
 em, i, q 											{ font-style: italic; }
+
+h1, h2, h3, h4, h5, h6 {
+	
+}
+
+h1 {
+	
+}
+
+h2 {
+	
+}
+
+h3 {
+	
+}
+
+h4 {
+	
+}
+
+h5 {
+	
+}
+
+h6 {
+	
+}
+
+// ------------------------------------------------------------
+// Breakpoints
+// ------------------------------------------------------------
+
+//Two
+@include breakpoint($b-vp) {
+	
+	h1 {
+		
+	}
+	
+	h2 {
+		
+	}
+	
+	h3 {
+		
+	}
+	
+	h4 {
+		
+	}
+	
+	h5 {
+		
+	}
+	
+	h6 {
+		
+	}
+}
+
+//Free
+@include breakpoint($c-vp) {
+	
+	h1 {
+		
+	}
+	
+	h2 {
+		
+	}
+	
+	h3 {
+		
+	}
+	
+	h4 {
+		
+	}
+	
+	h5 {
+		
+	}
+	
+	h6 {
+		
+	}
+}
+
+//Four
+@include breakpoint($d-vp) {
+	
+	h1 {
+		
+	}
+	
+	h2 {
+		
+	}
+	
+	h3 {
+		
+	}
+	
+	h4 {
+		
+	}
+	
+	h5 {
+		
+	}
+	
+	h6 {
+		
+	}
+}
+
+//Five
+@include breakpoint($e-vp) {
+	
+	h1 {
+		
+	}
+	
+	h2 {
+		
+	}
+	
+	h3 {
+		
+	}
+	
+	h4 {
+		
+	}
+	
+	h5 {
+		
+	}
+	
+	h6 {
+		
+	}
+}
+
+//Six
+@include breakpoint($f-vp) {
+	
+	h1 {
+		
+	}
+	
+	h2 {
+		
+	}
+	
+	h3 {
+		
+	}
+	
+	h4 {
+		
+	}
+	
+	h5 {
+		
+	}
+	
+	h6 {
+		
+	}
+}
