--- a/assets/css/ie.css
+++ b/assets/css/ie.css
@@ -4,4 +4,4 @@
  *   <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
  * <![endif]--> */
 
-/*# sourceMappingURL=../../scss/ie.css.map */
+/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIi4uL3Njc3MvaWUuc2NzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQTs7OztrQkFJa0IiLCJmaWxlIjoiLi4vYXNzZXRzL2Nzcy9pZS5jc3MiLCJzb3VyY2VzQ29udGVudCI6W251bGxdfQ== */
