working on the grunt

--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -4,7 +4,6 @@
 @import "libs/settings";
 @import "libs/mixins";
 
-
 /* ::Base styles */
 /* ------------------------------------------------------------ */
 
@@ -27,12 +26,16 @@ body {
 @import "libs/typography"; 					// Base level typography
 @import "libs/forms";						// Forms
 @import "libs/iubenda"; 					// Iubenda
-@import "libs/bxslider"; 					// bxslider
-@import "libs/strip"; 						// strip
+//@import "libs/bxslider"; 					// bxslider
+//@import "libs/strip"; 						// strip
 
 a {
 	color: $action;
 	text-decoration: none;
+
+	&:hover, &:active, &:focus {
+
+	}
 }
 
 .svg-wrapper {
